--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -1,5 +1,3 @@
-<!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
-
 <!-- wp:group {"tagName":"main","metadata":{"name":"Outer Container"},"className":"is-style-horizontal-scroll","layout":{"type":"constrained"}} -->
 <main id="panels-outer-container" class="wp-block-group is-style-horizontal-scroll"><!-- wp:group {"metadata":{"name":"Inner Container"},"className":"is-style-group-full","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div id="panels-inner-container" class="wp-block-group is-style-group-full"><!-- wp:group {"tagName":"section","metadata":{"name":"Home"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
@@ -164,12 +162,12 @@
    <!-- wp:read-more {"content":"instagram"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:read-more {"content":"email"} /--></div>
+   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"email"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph -->
+   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph -->
    <p>© 2023 MAN/ONE MUSIC </p>
    <!-- /wp:paragraph -->
    
