--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -67,8 +67,8 @@
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
-   <!-- wp:columns {"className":"is-style-columns-full-bottom"} -->
-   <div class="wp-block-columns is-style-columns-full-bottom"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
    <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets. YAY</p>
    <!-- /wp:paragraph -->
@@ -95,8 +95,8 @@
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
    
-   <!-- wp:columns {"className":"is-style-columns-full-bottom"} -->
-   <div class="wp-block-columns is-style-columns-full-bottom"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
    <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
    <!-- /wp:paragraph -->
@@ -127,8 +127,8 @@
    <h1 class="wp-block-heading is-style-heading-section">about</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:columns {"className":"is-style-columns-full-bottom"} -->
-   <div class="wp-block-columns is-style-columns-full-bottom"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
    <p class="is-style-indent-left">With performances alongside luminaries such as Pete Tong, Skream, Booka Shade, Sasha and festival appearances at ULTRA, Sonar, ALTN8 and Clockenflap the IXA musical adventure continues. New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
    <!-- /wp:paragraph -->
@@ -155,21 +155,21 @@
    <h1 class="wp-block-heading is-style-heading-section">contact</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:columns {"verticalAlignment":"bottom","className":"is-style-columns-full-bottom"} -->
-   <div class="wp-block-columns are-vertically-aligned-bottom is-style-columns-full-bottom"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"linkedin"} /-->
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"top","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-top is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"linkedin"} /-->
    
    <!-- wp:read-more {"content":"facebook"} /-->
    
    <!-- wp:read-more {"content":"instagram"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"email"} /--></div>
+   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"email"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph -->
+   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-style-column-padding-align-bottom"><!-- wp:paragraph -->
    <p>© 2023 MAN/ONE MUSIC </p>
    <!-- /wp:paragraph -->
    
