--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -3,8 +3,9 @@
 <!-- wp:group {"tagName":"main","metadata":{"name":"Outer Container"},"className":"is-style-horizontal-scroll","layout":{"type":"constrained"}} -->
 <main id="panels-outer-container" class="wp-block-group is-style-horizontal-scroll"><!-- wp:group {"metadata":{"name":"Inner Container"},"className":"is-style-group-full","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div id="panels-inner-container" class="wp-block-group is-style-group-full"><!-- wp:group {"tagName":"section","metadata":{"name":"Home"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="home" class="wp-block-group is-style-group-section panel"><!-- wp:group {"metadata":{"name":"Home header"},"className":"is-style-home-heading","layout":{"type":"constrained"}} -->
-   <div class="wp-block-group is-style-home-heading"><!-- wp:heading {"level":1,"className":"is-style-logo-huge"} -->
+   <section id="home" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:group {"metadata":{"name":"Home header"},"layout":{"type":"constrained"}} -->
+   <div class="wp-block-group"><!-- wp:heading {"level":1,"className":"is-style-logo-huge"} -->
    <h1 class="wp-block-heading is-style-logo-huge">man/one music</h1>
    <!-- /wp:heading -->
    
@@ -27,8 +28,8 @@
    <!-- /wp:columns --></div>
    <!-- /wp:group -->
    
-   <!-- wp:columns {"className":"is-style-columns-full"} -->
-   <div class="wp-block-columns is-style-columns-full"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"40vh","bottom":"0px"}}},"className":"is-style-default"} -->
+   <div class="wp-block-columns are-vertically-aligned-bottom is-style-default" style="margin-top:40vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"is-style-indent-right"} -->
    <p class="is-style-indent-right">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
    <!-- /wp:paragraph --></div>
@@ -55,17 +56,19 @@
    <p>Amsterdam</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <!-- /wp:columns --></div>
+   <!-- /wp:group --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Projects"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
-   <h1 class="wp-block-heading is-style-heading-section">projects</h1>
-   <!-- /wp:heading -->
-   
-   <!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
+   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
+   
+   <!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <h1 class="wp-block-heading is-style-heading-section">projects</h1>
+   <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
@@ -83,17 +86,19 @@
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <!-- /wp:columns --></div>
+   <!-- /wp:group --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Releases"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
-   <h1 class="wp-block-heading is-style-heading-section">releases</h1>
-   <!-- /wp:heading -->
-   
-   <!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
+   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
    <div class="wp-block-manonemusic-cards-stack"></div>
    <!-- /wp:manonemusic/cards-stack -->
+   
+   <!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <h1 class="wp-block-heading is-style-heading-section">releases</h1>
+   <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
@@ -113,7 +118,8 @@
    <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-style-column-padding-align-bottom"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <!-- /wp:columns --></div>
+   <!-- /wp:group --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"About"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
@@ -123,7 +129,8 @@
    <!-- /wp:image --></div>
    <!-- /wp:manonemusic/container -->
    
-   <!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
    <h1 class="wp-block-heading is-style-heading-section">about</h1>
    <!-- /wp:heading -->
    
@@ -147,16 +154,18 @@
    <p class="is-style-indent-right">Music gives a soul to the universe, wings to the mind, flight to the imagination, and life to everything.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <!-- /wp:columns --></div>
+   <!-- /wp:group --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Contact"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="contact" class="wp-block-group is-style-group-section panel"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <section id="contact" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
    <h1 class="wp-block-heading is-style-heading-section">contact</h1>
    <!-- /wp:heading -->
    
-   <!-- wp:columns {"className":"is-style-default"} -->
-   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"top","className":"is-style-column-padding-align-bottom"} -->
+   <!-- wp:columns {"style":{"spacing":{"margin":{"top":"40vh","bottom":"0px"}}},"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default" style="margin-top:40vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"top","className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-vertically-aligned-top is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"linkedin"} /-->
    
    <!-- wp:read-more {"content":"facebook"} /-->
@@ -177,7 +186,8 @@
    <p>Website by JuliScapucin</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <!-- /wp:columns --></div>
+   <!-- /wp:group --></section>
    <!-- /wp:group --></div>
    <!-- /wp:group --></main>
    <!-- /wp:group -->
