--- a/app/public/wp-content/themes/manonemusic/templates/single-release.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-release.html
@@ -1,4 +1,3 @@
 <!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
 
-<!-- wp:pattern {"slug":"manonemusic/release-content"} /-->
-   
+<!-- wp:post-content /-->   
