--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -61,12 +61,9 @@
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Projects"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
-   <div class="wp-block-group is-style-max-width"><!-- wp:manonemusic/cards-stack {"section":"project","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
-   <div class="wp-block-manonemusic-cards-stack"></div>
-   <!-- /wp:manonemusic/cards-stack -->
-   
-   <!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
+   <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
    <h1 class="wp-block-heading is-style-heading-section">projects</h1>
    <!-- /wp:heading -->
    
@@ -79,24 +76,24 @@
    <!-- wp:categories /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column -->
-   <div class="wp-block-column"></div>
-   <!-- /wp:column -->
-   
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
-   <!-- /wp:group --></section>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"width":"15%"} -->
+   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"project","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
+   <div class="wp-block-manonemusic-cards-stack"></div>
+   <!-- /wp:manonemusic/cards-stack --></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Releases"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
-   <div class="wp-block-group is-style-max-width"><!-- wp:manonemusic/cards-stack {"section":"release","classes":"absolute top-0 right-32 w-96 h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-8 z-40 bg-primary"} -->
-   <div class="wp-block-manonemusic-cards-stack"></div>
-   <!-- /wp:manonemusic/cards-stack -->
-   
-   <!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
+   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
+   <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-section"} -->
    <h1 class="wp-block-heading is-style-heading-section">releases</h1>
    <!-- /wp:heading -->
    
@@ -113,13 +110,16 @@
    
    <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-style-column-padding-align-bottom"></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-style-column-padding-align-bottom"></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
-   <!-- /wp:group --></section>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"width":"15%"} -->
+   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"release","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
+   <div class="wp-block-manonemusic-cards-stack"></div>
+   <!-- /wp:manonemusic/cards-stack --></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"About"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
