--- a/app/public/wp-content/themes/manonemusic/templates/single-project.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-project.html
@@ -1,3 +1,3 @@
 <!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
 
-<!-- wp:pattern {"slug":"manonemusic/project-content"} /-->
+<!-- wp:post-content /-->
