--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -149,18 +149,18 @@ Text Domain: manonemusic
 /* ------------------------------------- */
 
 /* Scrollbars */
-.site-body::-webkit-scrollbar,
-.is-style-stack-scroll::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.cards-stack::-webkit-scrollbar {
 	width: 4px;
 	height: 4px;
 }
-.site-body::-webkit-scrollbar-track,
-.is-style-stack-scroll::-webkit-scrollbar-track {
-	background-color: rgba(var(--color-secondary-rgb), 0.5);
-	margin-block: 2px;
+body::-webkit-scrollbar-track,
+.cards-stack::-webkit-scrollbar-track {
+	background-color: rgba(var(--color-secondary-rgb), 0.1);
+	margin-block: 1px;
 }
-.site-body::-webkit-scrollbar-thumb,
-.is-style-stack-scroll::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,
+.cards-stack::-webkit-scrollbar-thumb {
 	background-color: rgba(var(--color-secondary-rgb), 1);
 	width: 1rem;
 	height: 1rem;
