--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -60,6 +60,62 @@
    <!-- /wp:group --></section>
    <!-- /wp:group -->
    
+   <!-- wp:group {"tagName":"section","metadata":{"name":"Films"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
+   <section id="films" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
+   <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
+   <h1 class="wp-block-heading is-style-heading-display">Films</h1>
+   <!-- /wp:heading -->
+   
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
+   <p class="is-style-indent-left">His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
+   <!-- /wp:paragraph --></div>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"className":"is-style-column-full"} -->
+   <div class="wp-block-column is-style-column-full"></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></div>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"width":"15%"} -->
+   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"film","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
+   <div class="wp-block-manonemusic-cards-stack"></div>
+   <!-- /wp:manonemusic/cards-stack --></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></section>
+   <!-- /wp:group -->
+   
+   <!-- wp:group {"tagName":"section","metadata":{"name":"Commercials"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
+   <section id="commercials" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
+   <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
+   <h1 class="wp-block-heading is-style-heading-display">Commercials</h1>
+   <!-- /wp:heading -->
+   
+   <!-- wp:columns {"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
+   <p class="is-style-indent-left">His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
+   <!-- /wp:paragraph --></div>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"className":"is-style-column-full"} -->
+   <div class="wp-block-column is-style-column-full"></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></div>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"width":"15%"} -->
+   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"commercial","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
+   <div class="wp-block-manonemusic-cards-stack"></div>
+   <!-- /wp:manonemusic/cards-stack --></div>
+   <!-- /wp:column --></div>
+   <!-- /wp:columns --></section>
+   <!-- /wp:group -->
+   
    <!-- wp:group {"tagName":"section","metadata":{"name":"Projects"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
    <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
