project-page: add film cards block + dynamic date

--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -5,21 +5,21 @@
    <div id="panels-inner-container" class="wp-block-group is-style-group-full"><!-- wp:group {"tagName":"section","metadata":{"name":"Home"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="home" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
    <div class="wp-block-group is-style-max-width"><!-- wp:group {"metadata":{"name":"Home header"},"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"level":1,"className":"is-style-logo-huge"} -->
-   <h1 class="wp-block-heading is-style-logo-huge">man/one music</h1>
+   <div class="wp-block-group"><!-- wp:heading {"level":1,"className":"is-style-logo-huge home-heading"} -->
+   <h1 class="wp-block-heading is-style-logo-huge home-heading">man/one music</h1>
    <!-- /wp:heading -->
    
    <!-- wp:columns -->
    <div class="wp-block-columns"><!-- wp:column {"verticalAlignment":"stretch","className":"is-style-column-full"} -->
-   <div class="wp-block-column is-vertically-aligned-stretch is-style-column-full"><!-- wp:heading {"style":{"layout":{"selfStretch":"fit","flexSize":null}}} -->
-   <h2 class="wp-block-heading">music &amp; sound design</h2>
+   <div class="wp-block-column is-vertically-aligned-stretch is-style-column-full"><!-- wp:heading {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-titleLarge"} -->
+   <h2 class="wp-block-heading text-titleLarge">music &amp; sound design</h2>
    <!-- /wp:heading --></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"className":"is-style-column-full"} -->
-   <div class="wp-block-column is-style-column-full"><!-- wp:heading -->
-   <h2 class="wp-block-heading">2017–24</h2>
-   <!-- /wp:heading --></div>
+   <div class="wp-block-column is-style-column-full"><!-- wp:paragraph {"className":"text-titleLarge"} -->
+   <p class="text-titleLarge">2017–24</p>
+   <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"className":"is-style-column-full"} -->
@@ -28,32 +28,26 @@
    <!-- /wp:columns --></div>
    <!-- /wp:group -->
    
-   <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"40vh","bottom":"0px"}}},"className":"is-style-default"} -->
-   <div class="wp-block-columns are-vertically-aligned-bottom is-style-default" style="margin-top:40vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
+   <!-- wp:spacer -->
+   <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
+   <!-- /wp:spacer -->
+   
+   <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}}} -->
+   <div class="wp-block-columns are-vertically-aligned-bottom" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-titleLarge"} -->
+   <p class="text-titleLarge">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:group {"layout":{"type":"flex","orientation":"vertical"}} -->
-   <div class="wp-block-group"><!-- wp:read-more {"content":"projects"} /-->
-   
-   <!-- wp:read-more {"content":"releases"} /-->
-   
-   <!-- wp:read-more {"content":"about"} /-->
-   
-   <!-- wp:read-more {"content":"contact"} /--></div>
-   <!-- /wp:group --></div>
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">01/05</p>
-   <!-- /wp:paragraph -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"format":"m / Y","className":"text-titleLarge font-primary text-secondary"} /-->
    
-   <!-- wp:paragraph -->
-   <p>Amsterdam</p>
+   <!-- wp:paragraph {"className":"text-titleLarge"} -->
+   <p class="text-titleLarge">Location: Amsterdam</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
@@ -63,8 +57,8 @@
    <!-- wp:group {"tagName":"section","metadata":{"name":"Films"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="films" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
    <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
-   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">Films</h1>
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">Films</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
@@ -77,13 +71,11 @@
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns --></div>
-   <!-- /wp:column -->
+   <!-- /wp:columns -->
    
-   <!-- wp:column {"width":"15%"} -->
-   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"film","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
-   <div class="wp-block-manonemusic-cards-stack"></div>
-   <!-- /wp:manonemusic/cards-stack --></div>
+   <!-- wp:manonemusic/film-cards {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
+   <div style="margin-top:0;margin-bottom:0" class="wp-block-manonemusic-film-cards"></div>
+   <!-- /wp:manonemusic/film-cards --></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></section>
    <!-- /wp:group -->
@@ -91,8 +83,8 @@
    <!-- wp:group {"tagName":"section","metadata":{"name":"Commercials"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="commercials" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
    <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
-   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">Commercials</h1>
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">Commercials</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
@@ -119,8 +111,8 @@
    <!-- wp:group {"tagName":"section","metadata":{"name":"Projects"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
    <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
-   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">projects</h1>
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">projects</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
@@ -149,8 +141,8 @@
    <!-- wp:group {"tagName":"section","metadata":{"name":"Releases"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
    <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
-   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">releases</h1>
+   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">releases</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
@@ -186,14 +178,14 @@
    <!-- /wp:image --></div>
    <!-- /wp:manonemusic/container -->
    
-   <!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">about</h1>
+   <!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">about</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">With performances alongside luminaries such as Pete Tong, Skream, Booka Shade, Sasha and festival appearances at ULTRA, Sonar, ALTN8 and Clockenflap the IXA musical adventure continues. New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
+   <p class="is-style-indent-left">Matt Rudge is the Founder and Executive Producer at MAN/ONE MUSIC. He has over ten years of experience producing brand stories, crafting customer journeys, and implementing impactful sound design infrastructures for agencies to scale their audio output.</p>
    <!-- /wp:paragraph -->
    
    <!-- wp:paragraph {"className":"is-style-indent-right"} -->
@@ -206,8 +198,8 @@
    <!-- /wp:column -->
    
    <!-- wp:column {"verticalAlignment":"center","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-center is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">Music gives a soul to the universe, wings to the mind, flight to the imagination, and life to everything.</p>
+   <div class="wp-block-column is-vertically-aligned-center is-style-column-padding-align-bottom"><!-- wp:paragraph -->
+   <p>With performances alongside luminaries such as Pete Tong, Skream, Booka Shade, Sasha and festival appearances at ULTRA, Sonar, ALTN8 and Clockenflap the IXA musical adventure continues. New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
@@ -216,27 +208,43 @@
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Contact"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="contact" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
-   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"level":1,"className":"is-style-heading-display"} -->
-   <h1 class="wp-block-heading is-style-heading-display">contact</h1>
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <h2 class="wp-block-heading is-style-heading-display home-heading">contact</h2>
    <!-- /wp:heading -->
    
-   <!-- wp:columns {"style":{"spacing":{"margin":{"top":"40vh","bottom":"0px"}}},"className":"is-style-default"} -->
-   <div class="wp-block-columns is-style-default" style="margin-top:40vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"top","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-top is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"linkedin"} /-->
+   <!-- wp:spacer -->
+   <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
+   <!-- /wp:spacer -->
+   
+   <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}},"className":"is-style-default"} -->
+   <div class="wp-block-columns are-vertically-aligned-bottom is-style-default" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"></div>
+   <!-- /wp:column -->
+   
+   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge text-center"} /-->
+   
+   <!-- wp:spacer {"height":"4rem"} -->
+   <div style="height:4rem" aria-hidden="true" class="wp-block-spacer"></div>
+   <!-- /wp:spacer -->
+   
+   <!-- wp:paragraph {"className":"block mb-8"} -->
+   <p class="block mb-8">Barely active socials:</p>
+   <!-- /wp:paragraph -->
+   
+   <!-- wp:read-more {"content":"linkedin"} /-->
    
    <!-- wp:read-more {"content":"facebook"} /-->
    
-   <!-- wp:read-more {"content":"instagram"} /--></div>
+   <!-- wp:read-more {"content":"instagram"} /-->
+   
+   <!-- wp:spacer {"height":"4rem"} -->
+   <div style="height:4rem" aria-hidden="true" class="wp-block-spacer"></div>
+   <!-- /wp:spacer --></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"email"} /--></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-style-column-padding-align-bottom"><!-- wp:paragraph -->
-   <p>© 2023 MAN/ONE MUSIC </p>
-   <!-- /wp:paragraph -->
+   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"format":"© Y \\M\\A\\N/\\O\\N\\E \\M\\U\\S\\I\\C"} /-->
    
    <!-- wp:paragraph -->
    <p>Website by JuliScapucin</p>
