--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -92,11 +92,11 @@ Text Domain: manonemusic
 	}
 
 	a {
-		@apply font-primary text-secondary transition-all duration-500;
+		@apply font-primary text-secondary transition-all duration-200;
 	}
 
 	header a {
-		@apply relative overflow-x-clip before:content-[''] before:block before:w-full before:h-[1px] before:bg-secondary before:absolute before:bottom-0 before:-translate-x-full before:transition-all before:duration-500;
+		@apply relative overflow-x-clip before:content-[''] before:block before:w-full before:h-[1px] before:bg-secondary before:absolute before:bottom-0 before:-translate-x-full before:transition-all before:duration-200;
 	}
 
 	header a.active {
@@ -112,7 +112,8 @@ Text Domain: manonemusic
 		@apply max-w-prose text-bodyMedium;
 	}
 
-	figcaption {
+	figcaption,
+	time {
 		@apply font-primary uppercase font-extralight text-secondary;
 	}
 
@@ -160,7 +161,7 @@ Text Domain: manonemusic
 body::-webkit-scrollbar,
 .cards-stack::-webkit-scrollbar {
 	width: 4px;
-	height: 4px;
+	height: 20px;
 }
 body::-webkit-scrollbar-track,
 .cards-stack::-webkit-scrollbar-track {
