--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -34,8 +34,8 @@
    
    <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}}} -->
    <div class="wp-block-columns are-vertically-aligned-bottom" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-titleLarge"} -->
-   <p class="text-titleLarge">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
+   <div class="wp-block-column is-vertically-aligned-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-bodyLarge"} -->
+   <p class="text-bodyLarge">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
@@ -44,10 +44,10 @@
    <!-- /wp:column -->
    
    <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"format":"m / Y","className":"text-titleLarge font-primary text-secondary"} /-->
+   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"format":"m / Y","className":"text-bodyLarge font-primary text-secondary"} /-->
    
-   <!-- wp:paragraph {"className":"text-titleLarge"} -->
-   <p class="text-titleLarge">Location: Amsterdam</p>
+   <!-- wp:paragraph {"className":"text-bodyLarge"} -->
+   <p class="text-bodyLarge">Location: Amsterdam</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
