--- a/app/public/wp-content/themes/manonemusic/templates/single-release.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-release.html
@@ -1,3 +1,5 @@
 <!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
 
+<!-- wp:post-content /-->
+
 <!-- wp:pattern {"slug":"manonemusic/release-pattern"} /-->
